--- a/index.html
+++ b/index.html
@@ -6,47 +6,203 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <!-- ------------font awsome link---------------- -->
     <script src="https://kit.fontawesome.com/d1c638069a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div id="main">
-       <div class="dg" ><marquee behavior="" direction="">I LOVE MAKEING NEW THING <br><span>MAKEING NEW THING MAKE HAPPY</span>
-    </marquee>
-</div>
-        <div class="fix">
-            <div class="body">
+    <!-- starting`header -->
 
-                <h1>DEVELOPEING IS CHILD GAME FOR ME <br><samp>I LOVE PLAYING WITH CODES</samp> </h1>
-                <p>Collect data – internal and external: are made up of secondary sources of data.
-                    Internal data: is a data which is already in operation and it is stored within the organisation. For
-                    example:
-                    profit and
-                    loss statement, balance sheet, sales figures and inventory records.
+    <header>
+        <div id="head">
+            <div class="container">
+                <div class="full-head-body">
+                    <div class="left-head-body">
+                        <div class="left-text">
+                            <a href="#">Home</a>
+                            <a href="#">Club</a>
+                            <a href="#">World Cup 2023</a>
+                            <a href="#">Upcoming Matches</a>
+                            <a href="#">Contact</a>
 
-                    While External of data: is the data which does not exist inside the company, but was brought by
-                    individuals from
-                    outside
-                    the organisation, for example: government sources, corporate filings and media, including broadcast,
-                    print and
-                    internet
-                    (Grimsley, Sources of Secondary Data, 2003-2015).</p>
-                <button> click me</button>
+                        </div>
+                    </div>
+                    <div class="right-head-body">
 
+                        <div class="right-text-btn">
+                            <button>
+                                <i class="fa-solid fa-right-to-bracket"></i></a>
+                                <a href="./login.html">login</a>
+
+                            </button>
+
+                        </div>
+
+                    </div>
+                </div>
+
+                <!-- -----------------------------starting-cornabol section----------------------- -->
+
+                <div id="cornabol">
+
+                    <div class="cornabol-all-detail">
+                        <div class="cornabol-left-side">
+
+                            <div class="cornabol-text">
+                                <h1>Conmebol
+                                    Copa America
+                                    2021
+                                </h1>
+                                <div class="cornabol-position">
+                                    <div class="btn">
+                                        <button>
+                                            <a href="#"><i class="fa-solid fa-right-to-bracket"></i></a>
+                                            <a href="#">Watch Live</a>
+                                        </button>
+                                    </div>
+                                </div>
+
+                            </div>
+
+
+
+
+                        </div>
+                        <div class="cornabol-right-body">
+
+                            <div class="cornabol-img-one">
+                                <img src="./image/Group 33071.png" alt="group-image">
+                                <div class="img-two">
+                                    <img src="./image/1648334-world-cup-football-player-kick-off-football-kick-football-png-980_772_preview 1.png"
+                                        alt="ball-kicking-img">
+                                </div>
+                            </div>
+
+
+                        </div>
+                    </div>
+
+                </div>
             </div>
+
+        </div>
         </div>
 
-    </div >
-   <div class="dn"><div id="lg"><a target="_blank" href="https://www.facebook.com/md.r.hasan.357622">
-        <i class="fa-brands fa-facebook"></i>
-    </a>
-    <a target="_blank" class="lo" href="https://github.com/CreativeBoy625904">
-        <i class="fa-brands fa-github"></i>
-    </a>
-    <a target="_blank" href=" https://creativeboy625904.github.io/style-repo/">
-        <i class="fa-brands fa-gitkraken"></i></a>
-</div>
-</div>
-</body>
+    </header>
 
-</html>
+    <!-- --------------------second chapter card starting------------------------ -->
+
+    <div id="card">
+        <div class="container">
+            <div class="all-card">
+                <div class="one">
+                    <img src="./image/Project Cover.jpg" alt="">
+
+                    <h1>Neymar Jr</h1>
+                    <p>Neymar da Silva Santos commonly known as Neymar is regarded as one of the best footballers in the
+                        World. The Brazilian
+                        International made his .</p>
+                    <button class="btn"> learn more...</button>
+                </div>
+                <div class="one">
+                    <img src="./image/Project Cover-1.jpg" alt="">
+
+                    <h1>Lionel Messi</h1>
+                    <p>ionel Andrés Messi[note 1] (Spanish pronunciation: [ljoˈnel anˈdɾes ˈmesi] ⓘ; born 24 June 1987),
+                        also known as Leo
+                        Messi, is an
+                    </p>
+                    <button class="btn"> learn more...</button>
+                </div>
+                <div class="one">
+                    <img src="./image/Project Cover.png" alt="">
+
+                    <h1>Cristiano Ronaldo</h1>
+                    <p>Cristiano Ronaldo dos Santos Aveiro GOIH ComM (Portuguese pronunciation: [kɾiʃtjɐnu ʁɔnaldu];
+                        born 5 February 1985) is
+                        a Portuguese </p>
+                    <button class="btn"> learn more...</button>
+                </div>
+                <div class="one">
+                    <img src="./image/Project Cover-2.jpg" alt="">
+
+                    <h1>Paulo Dybala</h1>
+                    <p>.Paulo Bruno Exequiel Dybala (born 15 November 1993) is an Argentine professional footballer who
+                        plays as an attacking
+                    </p>
+                    <button class="btn"> learn more...</button>
+                </div>
+                <div class="one">
+                    <img src="./image/Project Cover-3.jpg" alt="">
+
+                    <h1>Mesut Ozil</h1>
+                    <p>Mesut Özil (German pronunciation: [ˈmeːzut ˈøːzil], Turkish: [meˈsut œˈzil]; born 15 October
+                        1988) is a German former
+                        professional</p>
+                    <button class="btn"> learn more...</button>
+                </div>
+                <div class="one">
+                    <img src="./image/Project Cover-1.png" alt="">
+
+                    <h1>Mauro Icardi</h1>
+                    <p>.Mauro Emanuel Icardi (born 19 February 1993) is an Argentine professional footballer who plays
+                        as a striker for Turkish
+                        Süper lig</p>
+                    <button class="btn"> learn more...</button>
+                </div>
+                <div class="one">
+                    <img src="./image/Project Cover-4.jpg" alt="">
+
+                    <h1>Di Maria</h1>
+                    <p>Ángel Fabián Di María (Spanish pronunciation: [ˈaŋxel faˈβjan di maˈɾia]; born 14 February 1988)
+                        is an Argentine
+                        professional footballer who plays</p>
+                    <button class="btn"> learn more...</button>
+                </div>
+                <div class="one">
+                    <img src="./image/Project Cover-5.jpg" alt="">
+
+                    <h1>Kylian Mbappé</h1>
+                    </p>kylian Mbappé Lottin (born 20 December 1998) is a French professional footballer who plays as a
+                    forward for Ligue 1 club
+                    Paris</p>
+                    <button class="btn"> learn more...</button>
+                </div>
+                <div class="one">
+                    <img src="./image/Project Cover-2.png" alt="">
+
+                    <h1>Mohamed Salah</h1>
+                    <p>ohamed Salah Hamed Mahrous Ghaly (Arabic: محمد صلاح حامد محروس غالي, Egyptian Arabic
+                        pronunciation:born 15 June 1992), .</p>
+                    <button class="btn"> learn more...</button>
+                </div>
+                <div class="one">
+                    <img src="./image/Project Cover-6.jpg" alt="">
+
+                    <h1>Harry Kane</h1>
+                    <p>Harry Edward Kane MBE (born 28 July 1993) is an English professional footballer who plays as a
+                        striker for Bundesliga
+                    </p>
+                    <button class="btn"> learn more...</button>
+                </div>
+                <div class="one">
+                    <img src="./image/Project Cover-7.jpg" alt="">
+
+                    <h1>Kevin De Bruyne</h1>
+                    <p>kevin De Bruyne (born 28 June 1991) is a Belgian professional footballer who plays as a
+                        midfielder for and captains bo</p>
+                    <button class="btn"> learn more...</button>
+                </div>
+                <div class="one">
+                    <img src="./image/Project Cover-3.png" alt="">
+
+                    <h1>Philippe Coutinho</h1>
+                    <p>Philippe Coutinho Correia (born 12 June 1992) is a Brazilian professional footballer who plays as
+                        an </p>
+                    <button class="btn"> learn more...</button>
+                </div>
+
+            </div>
+
+        </div>
+    </div>-
