--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </div>
                     <div class="right-head-body">
 
-                        <div class="right-text-btn">
+                        <div class="btn">
                             <button>
                                 <i class="fa-solid fa-right-to-bracket"></i></a>
                                 <a href="./login.html">login</a>
@@ -301,7 +301,7 @@
                     <button class="btn"> learn more...</button>
                 </div>
                 <div class="extra-detail">
-                    <video controls src="./video/" poster="./image/Project Cover-1.jpg"></video>
+                    <video controls src="./video/LIONEL MESSI WHATSAPP STATUS▶ LIONEL MESSI SKILLS▶LIONEL MESSI ATTITUDE STATUS▶ .mp4" poster="./image/Project Cover-1.jpg"></video>
                     <h1>Lionel Messi</h1>
                     <p>ionel Andrés Messi[note 1] (Spanish pronunciation: [ljoˈnel anˈdɾes ˈmesi] ⓘ; born 24 June 1987),
                         also known as
